--- a/src/app/blog/user-page/user-page.component.html
+++ b/src/app/blog/user-page/user-page.component.html
@@ -48,7 +48,7 @@
       <h2>Информация</h2>
       <li>
         <div class="data">
-          <div class="name" #name>Катя</div>
+          <div class="name" #name></div>
           <hr>
           <div class="label">Ваше Имя</div>
         </div>
@@ -56,7 +56,7 @@
       </li>
       <li>
         <div class="data">
-          <div class="name" #surname>Шорсткина</div>
+          <div class="name" #surname></div>
           <hr>
           <div class="label">Ваше Фамилия</div>
         </div>
@@ -64,7 +64,7 @@
       </li>
       <li>
         <div class="data">
-          <div class="name" #email>andrejs232@gmail.com</div>
+          <div class="name" #email></div>
           <hr>
           <div class="label">Ваш Е-майл</div>
         </div>
