--- a/src/app/blog/admin/admin.component.scss
+++ b/src/app/blog/admin/admin.component.scss
@@ -1,7 +1,10 @@
 * {
   margin: 0px;
   padding: 0px;
-  ;
+
+  input[type="file"]{
+    visibility: hidden;
+  }
 }
 
 %button-shared {
@@ -32,6 +35,33 @@
   align-items: center;
   margin-top: 150px;
   width: 100%;
+
+  .edit_section {
+    width: 600px;
+    display: flex;
+    position: fixed;
+    top: 30%;
+    left: 30%;
+    flex-direction: column;
+    border: 0.5px solid black;
+    border-radius: 20px;
+    margin-right: 20px;
+    padding: 20px;
+    height: 300px;
+    background-color: white;
+    form{
+      display: flex;
+      flex-direction: column;
+      mat-form-field {
+        width: 500px;
+      }
+
+      button {
+        width: 200px;
+        margin-top: 20px;
+      }
+    }
+  }
 
   .users {
     display: flex;
@@ -88,6 +118,9 @@
 
               .name {
                 margin-right: 80px;
+                h2{
+                  font-size: 18px;
+                }
 
                 hr {
                   height: 0.2px;
@@ -145,6 +178,7 @@
 
           .article_name {
             margin-right: 80px;
+            width: 150px;
           }
 
           @extend %button-shared;
